<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:src="@drawable/health_1"
      android:contentDescription="@string/healthy_first"
      android:scaleType="centerCrop"
      />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:layout_marginTop="20dp"
            android:inputType="text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="text"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:background="@color/welcome_color"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>


</LinearLayout>