<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_page"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/welcome_color"
            >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_title"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/menu"
                android:textColor="@color/welcome_page"
                android:textSize="25dp"
                android:fontFamily="sans-serif-condensed-medium"
                />
            <ImageView
                android:id="@+id/menu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_menu_foreground"
                />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/notification"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_notification_foreground"
                />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="#ECECEC"
        app:menu="@menu/menu_items" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar"
        android:background="@color/welcome_color"
        android:contentDescription="@string/healthy_first"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/slide_3" />


    <LinearLayout
        android:id="@+id/first_row"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/imageView"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/brain"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/brain"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brain"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/colon"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/colon"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colon"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dental"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/dental"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dental"
                android:textColor="@color/text_color"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/second_row"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/first_row" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/eye"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/eye"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eye"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/heart"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/heart"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heart"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/kidney"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/kidney"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kidney"
                android:textColor="@color/text_color"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/third_row"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@+id/second_row" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/liver"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/liver"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liver"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/lung"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/lungs"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lung"
                android:textColor="@color/text_color"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/stomach"
                android:layout_width="65dp"
                android:layout_height="70dp"
                android:src="@drawable/stomach"
                app:civ_border_width="2dp"
                app:civ_border_color="#f0f0f0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stomach"
                android:textColor="@color/text_color"
                />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>